fix: fix header alignment

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,8 +1,3 @@
-.headerContainer {
-  height: 5rem;
-  border-bottom: 1px solid var(--chakra-colors-gray-800);
-}
-
 .headerContent {
   max-width: 1120px;
   height: 5rem;
@@ -43,7 +38,7 @@
     }
   }
 
-  a {
+  a:not(:first-child) {
     margin-left: auto;
   }
 }
